<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:paddingTop="@dimen/layout_padding_top"
    android:paddingRight="@dimen/layout_padding_right"
    android:paddingBottom="@dimen/layout_padding_bottom"
    android:paddingLeft="@dimen/layout_padding_left" >
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:orientation="horizontal">
      <TextView
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:textColor="@color/red"
        android:textStyle="bold"        
        android:text="@string/new_project"/>
    </LinearLayout>  
    <LinearLayout
	    android:background="@drawable/divider"
	    android:layout_marginTop="5dp"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"/> 
    <LinearLayout
      android:layout_width="fill_parent"           
      android:layout_height="wrap_content"
      android:gravity="center_horizontal">
    <LinearLayout
      android:orientation="vertical"
      android:paddingTop="30dp"         
      android:layout_width="wrap_content"           
      android:layout_height="wrap_content"
      android:gravity="center_horizontal">
      <LinearLayout
        android:background="@drawable/txt_top_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
	      <TextView
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:textStyle="bold"	          
					android:gravity="center_vertical"
					android:paddingLeft="@dimen/label_padding_left"
					android:textSize="@dimen/label_text_size"           
					android:textColor="@color/black"
					android:text="@string/name"/>
	      <EditText
					android:id="@+id/project_name"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="4"
          android:paddingTop="@dimen/label_padding_top" 					
					android:gravity="right"
					android:maxWidth="97dp"
					android:singleLine="true"
					android:textSize="@dimen/login_edittext_size"
					android:background="@color/transparent"
					android:paddingRight="45dp"/>        
      </LinearLayout>
		  <LinearLayout
		    android:id="@+id/new_project_client_area"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@drawable/txt_bottom_selector"
		    android:clickable="true"
		    android:focusable="true">
		    <TextView
		      android:layout_width="wrap_content"
		      android:layout_height="fill_parent"    
		      android:layout_weight="1"
		      android:textStyle="bold"            
		      android:gravity="center_vertical"
		      android:paddingLeft="@dimen/label_padding_left"
		      android:textSize="@dimen/label_text_size"           
		      android:textColor="@color/black"
		      android:text="@string/client"/>
		    <TextView
		      android:id="@+id/project_client"
		      android:layout_width="wrap_content"
		      android:layout_height="fill_parent"
		      android:layout_weight="4"
		      android:gravity="right"
		      android:singleLine="true"
		      android:paddingTop="@dimen/label_padding_top"
		      android:paddingRight="@dimen/label_padding_right"
		      android:textSize="@dimen/label_text_size"
		      android:textColor="@color/black"
		      android:maxLines="1"/>
		  </LinearLayout>       
      <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
		    <Button
					android:id="@+id/create_project_create"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textColor="@color/black"	
					android:text="@string/create" />
	      <Button
					android:id="@+id/create_project_cancel"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textColor="@color/black"  
					android:text="@string/cancel" />
      </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
